--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <h1 class="designer">DESIGNER</h1>
     <h1 class="coder">CODER</h1>
 
-    <h2>ux/ui Designer</h2>
+    <h2 class="h2-designer">ux/ui Designer</h2>
     <p class="designer-text">with a passion for creating outstanding, engaging and functional apps and web sites.</p>
 
-    <h2>Front End Developer</h2>
+    <h2 class="h2-coder">Front End Developer</h2>
     <p class="coder-text">who focuses on writing clean and efficient codes. Love html, CSS, Wordpress with a touch of Java Script.</p>
 
     <h3 class="name">DARIA KARDAT</h3>
